--- a/views/templates/story.html.twig
+++ b/views/templates/story.html.twig
@@ -23,7 +23,7 @@
         {% block error %}
         {% endblock %}
    
-            <section id="histoire" class="story-content">
+            <section id="story" class="story-content">
                 <h2>Mon histoire</h2>
 
                 <form id="histoire-form" method="post" class="entity-form">
