--- a/public/assets/styles/css/pages/pedagogie.css
+++ b/public/assets/styles/css/pages/pedagogie.css
@@ -1,4 +1,16 @@
 @charset "UTF-8";
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 #pedagogie .pedagie-container {
   max-width: 1000px;
   margin: 40px auto;
