--- a/public/assets/styles/sass/components/_header.scss
+++ b/public/assets/styles/sass/components/_header.scss
@@ -5,6 +5,26 @@
 // ====================================
 // HEADER PRINCIPAL
 // ====================================
+
+html {
+    width: 100%;
+  cursor: url('../../img/Miaou/main.svg') 4 0, pointer;
+
+  a:hover , button:hover , input:hover , select:hover, .action-button:hover, #backToTopButton img, .retour-haut, .retour-haut div {
+    cursor: url('../../img/Miaou/mainGrande.svg') 5 0, pointer;
+    
+  }
+}
+
+body {
+    cursor: url('../../img/Miaou/main.svg') 4 0, pointer;
+
+  a:hover , button:hover , input:hover , select:hover, .action-button:hover, #backToTopButton img, .retour-haut {
+    cursor: url('../../img/Miaou/mainGrande.svg') 5 0, pointer;
+    
+  }
+}
+
 #header {
     position: fixed;
     top: 0;
@@ -158,7 +178,7 @@
         left: 1vh;
         width: 0;
         height: 0;
-        cursor: pointer;
+        //;
         z-index: 10;
 
         &:hover {
