--- a/public/assets/styles/sass/components/_modal.scss
+++ b/public/assets/styles/sass/components/_modal.scss
@@ -105,7 +105,7 @@ $modal-button-tertiary-hover: color.adjust(#28a745, $lightness: -10%);
 .close-button {
     color: #FAF7ED;
     font-size: clamp(1.5rem, 4vw, 2rem);
-    cursor: pointer;
+    ;
     line-height: 1;
     background: transparent;
     border: none;
@@ -249,7 +249,7 @@ $modal-button-tertiary-hover: color.adjust(#28a745, $lightness: -10%);
     justify-content: center;
     
     transition: all varcolors.$transition-normal;
-    cursor: pointer;
+    ;
 
     &:hover {
         background-color: $modal-button-bg-hover;
