--- a/views/templates/subpages/_header.html.twig
+++ b/views/templates/subpages/_header.html.twig
@@ -106,7 +106,7 @@
                 <a href="index.php?route=stories">Histoires</a>
             </li>
             <li>
-                <a href="index.php?route=coloriages">Coloriages</a>
+                <a href="index.php?route=colorings">Coloriages</a>
             </li>
             <li>
                 <a href="index.php?route=displayGame">Jeux</a>
@@ -128,7 +128,7 @@
                 <a href="index.php?route=stories">Histoires</a>
             </li>
             <li>
-                <a href="index.php?route=coloriages">Coloriages</a>
+                <a href="index.php?route=colorings">Coloriages</a>
             </li>  
             <li>
                 <a href="index.php?route=games">Jeux</a>
