dashboard, gestion des users, gestion d'un user, apercu des messages de contac, lecture et reponse à un message. A verif

--- a/public/assets/styles/css/pages/coloring.css
+++ b/public/assets/styles/css/pages/coloring.css
@@ -246,7 +246,7 @@
 
 .download-button {
   background-color: #3FEB79;
-  border: 1px solid #000000;
+  border: 1px solid rgb(23.3018867925, 223.6981132075, 90.8773584906);
   box-shadow: 6px 6px 0px rgb(20.8962264151, 200.6037735849, 81.4952830189);
   border-radius: 500px;
   padding: 0.8rem 1rem;
@@ -281,11 +281,11 @@
   box-shadow: 6px 6px 0px rgb(20.8962264151, 200.6037735849, 81.4952830189);
 }
 .download-button {
-  display: inline-flex;
+  /*display: inline-flex;
   align-items: center;
   gap: 12px;
   padding: 15px 30px;
-  background: #3FEB79;
+  background:  varcolors.$vert-main;
   color: white;
   text-decoration: none;
   border-radius: 15px;
@@ -293,19 +293,20 @@
   font-weight: 600;
   transition: all 0.3s ease;
   box-shadow: 0 4px 15px rgba(71, 185, 114, 0.3);
-  border: 3px solid transparent;
-}
-.download-button:hover {
-  background: rgb(23.3018867925, 223.6981132075, 90.8773584906);
-  transform: translateY(-3px);
-  box-shadow: 0 8px 25px rgba(71, 185, 114, 0.4);
-  border-color: rgb(20.8962264151, 200.6037735849, 81.4952830189);
-}
-.download-button:hover .download-icon {
-  transform: scale(1.1);
-}
-.download-button:active {
-  transform: translateY(-1px);
+  border: 3px solid transparent;*/
+  /*&:hover {
+    background: color.adjust( varcolors.$vert-main, $lightness: -10%);
+    transform: translateY(-3px);
+    box-shadow: 0 8px 25px rgba(71, 185, 114, 0.4);
+    border-color: color.adjust( varcolors.$vert-main, $lightness: -15%);
+
+    .download-icon {
+      transform: scale(1.1);
+    }
+  }*/
+  /*&:active {
+    transform: translateY(-1px);
+  }*/
 }
 .download-button.downloading {
   animation: pulse 1s ease-in-out;
