--- a/public/assets/styles/sass/pages/story.scss
+++ b/public/assets/styles/sass/pages/story.scss
@@ -30,6 +30,10 @@
     //color: $color-histoires-dark;
   }
 
+  p {
+     text-align: center;
+  }
+
   // ✅ Ajout d’espace en bas pour petits écrans
   @include mixins.breakpoint(custom) {
     padding-bottom: 6rem;
