--- a/views/templates/subpages/_header.html.twig
+++ b/views/templates/subpages/_header.html.twig
@@ -12,7 +12,7 @@
                     <img class="avatar" src="assets/img/avatars/admin.svg" alt="Logo Miaou, mascotte du site">
                 {% else %}
                     {# Utilisateur connecté #}
-                    <img class="avatar" src="{{ avatar.urlMini }}" alt="{{ avatar.description }}">
+                    <img class="avatar" src="{{ avatar.url }}" alt="{{ avatar.description }}">
 
                 {% endif %}
             </figure>
