--- a/public/assets/styles/css/pages/story.css
+++ b/public/assets/styles/css/pages/story.css
@@ -1460,6 +1460,9 @@ main {
   text-align: center;
   margin-bottom: 0;
 }
+#story p {
+  text-align: center;
+}
 @media (max-width: 430px) {
   #story {
     padding-bottom: 6rem;
