--- a/public/assets/styles/sass/pages/coloring.scss
+++ b/public/assets/styles/sass/pages/coloring.scss
@@ -298,8 +298,8 @@
 
   .download-button {
 
-    @include mixins.button-3d(varcolors.$vert-main, color.adjust(varcolors.$vert-main, $lightness: -15%), varcolors.$noir);
-    display: inline-flex;
+    @include mixins.button-coloriages();
+    /*display: inline-flex;
     align-items: center;
     gap: 12px;
     padding: 15px 30px;
@@ -311,9 +311,9 @@
     font-weight: 600;
     transition: all 0.3s ease;
     box-shadow: 0 4px 15px rgba(71, 185, 114, 0.3);
-    border: 3px solid transparent;
+    border: 3px solid transparent;*/
 
-    &:hover {
+    /*&:hover {
       background: color.adjust( varcolors.$vert-main, $lightness: -10%);
       transform: translateY(-3px);
       box-shadow: 0 8px 25px rgba(71, 185, 114, 0.4);
@@ -322,11 +322,11 @@
       .download-icon {
         transform: scale(1.1);
       }
-    }
+    }*/
 
-    &:active {
+    /*&:active {
       transform: translateY(-1px);
-    }
+    }*/
 
     &.downloading {
       animation: pulse 1s ease-in-out;
